fix: gap between title and options

--- a/src/shared/ui/RadioGroupUI/RadioGroupUI.module.css
+++ b/src/shared/ui/RadioGroupUI/RadioGroupUI.module.css
@@ -1,4 +1,4 @@
-.radioGroup {
+.radioGroupOptions {
   display: flex;
   flex-direction: column;
   gap: 12px;
@@ -9,4 +9,10 @@
   font-family: var(--ff-heading);
   font-size: var(--fs-h3);
   line-height: var(--lh-h3);
+}
+
+.radioGroup {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
 }
